fix: make background of .portfolio-wrap::before darker for enhance reading

--- a/static/themes/MyResume/assets/css/style.css
+++ b/static/themes/MyResume/assets/css/style.css
@@ -613,7 +613,7 @@ section {
 
 .portfolio .portfolio-wrap::before {
   content: "";
-  background: rgba(255, 255, 255, 0.7);
+  background: #ffffffdd;
   position: absolute;
   left: 30px;
   right: 30px;
@@ -677,7 +677,6 @@ section {
 .portfolio .portfolio-wrap .portfolio-info p {
   color: #45505b;
   font-size: 14px;
-  text-transform: uppercase;
   padding: 0;
   margin: 0;
 }
